fix: adjust hero section layout and alignment in style.css

--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  flex-grow: 1;
   gap: 36px;
 }
 
@@ -95,7 +97,7 @@ h1 {
   background-image: url("assets/icons/hero_logo.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  margin-left: 5px;
+  margin-left: 8px;
   width: 56px;
   height: 38px;
 }
@@ -109,7 +111,6 @@ h1 {
 }
 
 .hero-logo {
-  padding-top: 121px;
   width: 66px;
   height: 73px;
 }
